# compizconfig-python

./: Makefile.am  NEWS  README.md  acinclude.m4  autogen.sh  compizconfig-bindings.pc  compizconfig-bindings.pc.in  configure.ac
src/: .Makefile.am.swp  Makefile.am  ccs.pyx  compizconfig.pyx
